--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,13 +22,13 @@
             android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="14"
+            tools:text="XXXXXXXXXXXXXXXXX"
             android:textSize="21sp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-    
+
         <Button
             android:id="@+id/btn_logout"
             android:layout_width="wrap_content"
